--- a/color-picker.html
+++ b/color-picker.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
 
-  <title>Hello, world!</title>
+  <title>Phase 1 | Deliverable 1</title>
 </head>
 
 <body>
@@ -146,41 +146,6 @@
           <div class="modal-footer border-0">
             <button type="button" class="agree-button btn btn-primary px-2 col-3" data-bs-dismiss="modal">Agree</button>
             <button type="button" class="btn btn-danger px-2 col-3" data-bs-dismiss="modal">Cancel</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- Summary Modal -->
-    <div class="modal fade" id="summary-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">Item Prev</th>
-                  <th scope="col">Quantity</th>
-                  <th scope="col">Price</th>
-                </tr>
-              </thead>
-              <tbody class="not-bold"></tbody>
-              <thead>
-                <tr>
-                  <th class="border-0" colspan="2">Total Price</th>
-                  <th class="border-0 grand-total">R500</th>
-                </tr>
-              </thead>
-            </table>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-dark col-3" data-bs-dismiss="modal">Go Back</button>
-            <button type="button" class="btn btn-success final-checkout col-3">Final Checkout</button>
           </div>
         </div>
       </div>
